--- a/manifest.json
+++ b/manifest.json
@@ -29,6 +29,6 @@
     }],
     "start_url":"index.html",
     "display":"standalone",
-    "theme_color":"#131313",
+    "theme_color":"#B8C0FF",
     "background_color":"#B8C0FF"
 }
