--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,7 @@
         "type":"image/png",
         "purpose":"maskable"
     }, {
-        "src":"images/icons/icons_x144.png",
+        "src":"images/icons/maskable_icon_x144.png",
         "size":"144x144",
         "type":"image/png",
         "purpose":"any"
