--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,7 @@
         "src":"images/icons/maskable_icon_x144.png",
         "size":"144x144",
         "type":"image/png",
-        "purpose":"any"
+        "purpose":"any maskable"
     }, {
         "src":"images/icons/icons_x192.png",
         "size":"192x192",
