--- a/manifest.json
+++ b/manifest.json
@@ -4,13 +4,11 @@
     "icons": [{
         "src":"images/icons/icons_x72.png",
         "size":"72x72",
-        "type":"image/png",
-        "purpose":"maskable"
+        "type":"image/png"
     }, {
         "src":"images/icons/icons_x96.png",
         "size":"96x96",
-        "type":"image/png",
-        "purpose":"maskable"
+        "type":"image/png"
     }, {
         "src":"images/icons/maskable_icon_x144.png",
         "size":"144x144",
@@ -19,13 +17,11 @@
     }, {
         "src":"images/icons/icons_x192.png",
         "size":"192x192",
-        "type":"image/png",
-        "purpose":"maskable"
+        "type":"image/png"
     }, {
         "src":"images/icons/icons_x512.png",
         "size":"512x512",
-        "type":"image/png",
-        "purpose":"maskable"
+        "type":"image/png"
     }],
     "start_url":"index.html",
     "display":"standalone",
