--- a/manifest.json
+++ b/manifest.json
@@ -1,30 +1,34 @@
 {
-    "name":"Lindsay Lemire",
-    "short_name":"Lindsay",
+    "name":"restaurant",
+    "short_name":"restau",
     "icons": [{
-        "src":"images/icons/icons_x72.png",
-        "size":"72x72",
-        "type":"image/png"
+        "src":"img/icons/maskable_icon_x72.png",
+        "sizes":"72x72",
+        "type":"image/png",
+        "purpose":"maskable"
     }, {
-        "src":"images/icons/icons_x96.png",
-        "size":"96x96",
-        "type":"image/png"
+        "src":"img/icons/maskable_icon_x96.png",
+        "sizes":"96x96",
+        "type":"image/png",
+        "purpose":"maskable"
     }, {
-        "src":"images/icons/maskable_icon_x144.png",
-        "size":"144x144",
+        "src":"img/icons/maskable_icon_x144.png",
+        "sizes":"144x144",
         "type":"image/png",
         "purpose":"any"
     }, {
-        "src":"images/icons/icons_x192.png",
-        "size":"192x192",
-        "type":"image/png"
+        "src":"img/icons/maskable_icon_x192.png",
+        "sizes":"192x192",
+        "type":"image/png",
+        "purpose":"maskable"
     }, {
-        "src":"images/icons/icons_x512.png",
-        "size":"512x512",
-        "type":"image/png"
+        "src":"img/icons/maskable_icon_x512.png",
+        "sizes":"512x512",
+        "type":"image/png",
+        "purpose":"maskable"
     }],
     "start_url":"index.html",
     "display":"standalone",
-    "theme_color":"#F5F5F5",
-    "background_color":"#131313"
+    "theme_color":"#000000",
+    "background_color":"#000000"
 }
