--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name":"restaurant",
-    "short_name":"restau",
+    "name":"LindsayLemire",
+    "short_name":"Lindsay",
     "icons": [{
         "src":"images/icons/maskable_icon_x72.png",
         "sizes":"72x72",
